<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/i0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/isgm"
        app:srcCompat="@drawable/isgm" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/please"
        android:textColor="#ff0000"
        android:textSize="@dimen/twenty_five1"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fttxButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_round_border"
        android:text="@string/fttx"
        android:textColor="@color/buttonLoginTextColor" />

    <Button
        android:id="@+id/b2bButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round_border"
        android:text="@string/b2b"
        android:textColor="@color/buttonLoginTextColor" />

    <Button
        android:id="@+id/mobiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round_border"
        android:text="@string/mobi"
        android:textColor="@color/buttonLoginTextColor" />

    <Button
        android:id="@+id/b2bPremiumButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round_border"
        android:text="@string/b2bPremium"
        android:textColor="@color/buttonLoginTextColor" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round_border"
        android:text="@string/gallery"
        android:textColor="@color/buttonLoginTextColor" />
</LinearLayout>