<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:layout_margin="24dp"
        android:id="@+id/chooseDate"
        android:inputType="date"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:layout_width="match_parent"
        android:focusable="false"
        android:drawablePadding="@dimen/margin_medium"
        android:gravity="left"
        android:height="60dp"
        android:layout_gravity="center"
        android:hint="@string/chooseDate"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <TextView
        android:id="@+id/data"
        android:layout_width="160dp"
        android:focusable="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/noData"
        android:layout_marginEnd="@dimen/ten"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="18sp"
            android:textColor="@color/ptc1"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/count"
            android:textSize="18sp"
            android:textColor="@color/ptc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id = "@+id/recyclerView"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>